# Jimmy-Personal-Assistant

./: .gitignore  Cargo.toml  call_mom.js  get_ngrok_url.ps1  make_call.js  outbound_calling_setup.md  package-lock.json  personal-info.json  requirements.txt  restore_ngrok.ps1  setup_instructions.md  user-profile.md  vapi.env  vapi_setup.md
ai-dashboard/: index.html  package-lock.json  package.json  setup-google.ps1  vercel.json
ai-dashboard/api/: agents.js  async-task.js  brayden-context.js  business-call.js  calendar-tool.js  chat.js  contacts.js  google-auth.js  google-places.js  make-call.js  schedule-callback.js  sms-webhook.js  sms.js  transfer.js  user-profile.js  web-search.js  webhook.js
src/: agent.rs  groq_client.rs  main.rs  memory.rs  vapi_server.rs  web_search.rs
vercel-proxy/: package.json  vercel.json
vercel-proxy/api/: webhook.js
