[package]
name = "ai-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP client for Groq API
reqwest = { version = "0.11", features = ["json"] }

# Web server for Vapi webhooks
warp = "0.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenv = "0.15"

# CLI interface
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File operations
dirs = "5.0"

# Database (for memory)
rusqlite = { version = "0.29", features = ["bundled"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID for generating IDs
uuid = { version = "1.0", features = ["v4"] }
